fix broken CSS reference to old ID

--- a/assets/css/site.css
+++ b/assets/css/site.css
@@ -17,7 +17,7 @@
     margin: 0;
 }
 
-#lastRefresh {
+#lastUpdate {
     margin-top: 5px;
     margin-bottom: 0px;
 }
